# cuopt

./: .coderabbit.yaml  .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  VERSION  build.sh  dependencies.yaml  print_env.sh  pyproject.toml
cpp/src/: CMakeLists.txt
cpp/src/distance/: distance.hpp
cpp/src/dual_simplex/: CMakeLists.txt  barrier.cpp  barrier.cu  barrier.hpp  basis_solves.cpp  basis_solves.hpp  basis_updates.cpp  basis_updates.hpp  bound_flipping_ratio_test.cpp  bound_flipping_ratio_test.hpp  branch_and_bound.cpp  branch_and_bound.cu  branch_and_bound.hpp  conjugate_gradient.hpp  crossover.cpp  crossover.cu  crossover.hpp  cusparse_dnvector.hpp  cusparse_info.hpp  cusparse_view.cu  cusparse_view.hpp  dense_matrix.hpp  dense_vector.hpp  device_sparse_matrix.cu  device_sparse_matrix.cuh  folding.cpp  folding.hpp  initial_basis.cpp  initial_basis.hpp  iterative_refinement.hpp  logger.hpp  mip_node.cpp  mip_node.hpp  phase1.cpp  phase1.hpp  phase2.cpp  phase2.hpp  pinned_host_allocator.cu  pinned_host_allocator.hpp  presolve.cpp  (+35 more)
cpp/src/linear_programming/: CMakeLists.txt  cuopt_c.cpp  cusparse_view.cu  cusparse_view.hpp  optimization_problem.cu  pdhg.cu  pdhg.hpp  pdlp.cu  pdlp.cuh  pdlp_constants.hpp  pdlp_hyper_params.cu  pdlp_warm_start_data.cu  saddle_point.cu  saddle_point.hpp  solve.cu  solve.cuh  solver_settings.cu  solver_solution.cu  translate.hpp  utils.cuh
cpp/src/math_optimization/: CMakeLists.txt  solution_reader.cu  solution_reader.hpp  solution_writer.cu  solution_writer.hpp  solver_settings.cu
cpp/src/mip/: CMakeLists.txt  solve.cu  solver.cu  solver_context.cuh  solver_settings.cu  solver_solution.cu  utils.cuh
(+648 files in other folders)
